attempting to fix gitignore (should actually ignore indicated file types)

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 .*
-*.pyc
-*.pyo
-.DS_Store
-*.so
-*.o
-*.orig
-*.tmp
 *~
+*.un
+*.pyc
+*.orig
+*bin/
+*build/
+*_build/
+*dist/
+*include/
+*generated/
+*lib/
+*src/
+*man/
 !.gitignore
